fix empty gap in the buttom

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -60,6 +60,10 @@ input, select, textarea {
     display: block;
     width: 85%;
 }
+
+.buttons {
+    margin:20px;
+}
 #cancel {
     width: 140px;
     display: inline;
@@ -173,7 +177,6 @@ table {
     footer {
         margin: 0auto;
         height: 40px;
-        padding: 0;
         padding: 5px 1px 7px 1px;
     }
     #my-signature {
@@ -186,6 +189,10 @@ table {
         padding: 0;
         position: center;
         font-size: 17px;
+    }
+
+    .buttons {
+        margin:0 auto;
     }
 
 }
